fixes to manifest and serviceworker

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="theme-color" content="#26c0ab">
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="style.css">
+  <link rel="apple-touch-icon" href="./images/logo.svg">
+  <link rel="shortcut icon" href="./images/Moha_tangx logo.jpg" type="image/x-icon">
   <title>tip-calculator-app</title>
 </head>
 <body>
